feat: enhance Section9 layout with new icon and Umplex SVG, update GSAP animations, and improve styling in globals.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,3 +18,8 @@ square {
   border-bottom: 40px solid transparent;
   border-top: 40px solid transparent;
 }
+
+.umplex-cls-1 {
+  fill: #fff;
+  stroke-width: 0px;
+}
