--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,7 @@ square {
   border-top: 40px solid transparent;
 }
 
-.umplex-cls-1 {
+/* .umplex-cls-1 {
   fill: #fff;
   stroke-width: 0px;
-}
+} */
